<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Botanique</string>
    <string name="action_settings">Settings</string>
    <string name="tab_map_text">地图</string>
    <string name="tab_nearby_text">附近</string>
    <string name="search_btn">搜索</string>
    <string name="tab_account_text">我的</string>
    <string name="pop_info">详情</string>
    <string name="pop_navigate">导航</string> 
    <string name="nearbylist">No Data</string>
    <string name="actionbar_title">植物详细信息</string> 
    <string name="account_name">账户名</string> 
    <string name="account_number">账户号</string> 
    <string name="collect">我的树洞</string>
    <string name="offline">离线包下载</string>
    <string name="offline_Map">离线地图</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="offline_navi">离线导航</string>
    <string name="cityname">北京市</string>
    <string name="help">帮助与反馈</string>
    <string name="lizhi">荔枝</string>
    <string name="Chinaname">中文名:</string>
    <string name="Othername">别　名:</string>
    <string name="Englishname">英文名:</string>
    <string name="Scientificname">学　名:</string>
    <string name="Scholarname">科　名:</string>
    <string name="Type">类　型:</string>
    <string name="Orignalplace">原产地:</string>
    <string name="Behavior">习　性:</string>
    <string name="Chinaname1">文名:文名:文名:文名:文名:文名:文名:文名:</string>
    <string name="Chinaname_title">荔枝</string>
    <string name="FeatureUse_title">主要特点与用途</string>
    <string name="FeatureUse">主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途主要特点与用途</string>
</resources>
