<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
   >
    <RelativeLayout android:layout_height="60sp"
        android:layout_width="match_parent"
        android:background="#00FF00">
        <ImageButton
            android:id="@+id/back" 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/actionbar_back"
            android:layout_centerVertical="true"
            android:background="#00000000"
      
            />
        
       <TextView
        android:layout_height="60sp"
        android:layout_width="match_parent"    
        android:text="@string/offline"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
       />
        
    </RelativeLayout>

    <TextView
        android:id="@+id/offline_map"
        android:layout_width="match_parent"
        android:layout_height="60dp"
     
        android:background="@drawable/setting_item_selector"
        android:drawableRight="@drawable/right"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/offline_Map"
        android:textSize="18sp" />
 
		<View 
		    android:id="@+id/view"
		    android:layout_width="match_parent"
		    android:layout_height="1px"	  
		    android:background="@color/black2"/>
	 <TextView 
	    android:id="@+id/offline_navi"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:drawableRight="@drawable/right"
        android:gravity="center_vertical"
		android:paddingRight="16dp"
	    android:paddingLeft="16dp"
		android:background="@drawable/setting_item_selector"
		android:text="@string/offline_navi"
		android:textSize="18sp"
			
		/>
       <!-- <TextView
					android:id="@+id/txt_collect"		
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/logo"
					android:drawableRight="@drawable/right"
					android:text="@string/collect" /> -->
        	
  
  
</LinearLayout>
