<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:gravity="center_horizontal"
	android:orientation="vertical">
    <ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbars="none">
		
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
    <View
				android:background="#ffeeeeee"
				android:layout_width="fill_parent"
				android:layout_height="1px" />
	    <RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:id="@+id/view_user"
				android:layout_marginTop="10dp"
			android:background="@drawable/setting_item_selector">
				<ImageView
					android:id="@+id/head"
					android:layout_marginRight="10dp"
					android:layout_marginLeft="10dp"
					android:layout_width="80.0dip"
					android:layout_height="80.0dip"
					android:src="@drawable/logo" />
				<TextView
					android:textSize="18.0dip"
					android:id="@+id/tvname"
					android:layout_marginTop="20dp"
					android:layout_toRightOf="@+id/head"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="胡思娟" />
					<TextView
					android:id="@+id/tvmsg"
					android:textSize="14.0dip"
					style="@style/txt_ContextStyle1"
					android:layout_marginTop="10dp"
					android:layout_below="@+id/tvname"
					android:layout_toRightOf="@+id/head" 
					android:text="账号：dada20150625" />
					
					<ImageView
					android:layout_marginRight="15dp"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/right" />
			<!--  <ImageView
                    android:id="@+id/iv_sex"
                    android:layout_toRightOf="@+id/tvname"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
					android:layout_marginTop="22dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_sex_female" /> -->
					 
			</RelativeLayout>
			<View
				android:background="@color/black2"
				android:layout_width="fill_parent"
				android:layout_height="1px" />
	    
		 
		 
		<!-- style="@style/TxtTitle" -->
		<TextView
					android:id="@+id/txt_collect"		
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:layout_marginTop="20dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/logo"
					android:drawableRight="@drawable/right"
					android:text="@string/collect" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1px" />
		<!-- style="@style/TxtTitle" -->
		<TextView
					android:id="@+id/txt_offLine"
					
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="10dp"
					android:drawableLeft="@drawable/icon_usercenter_offline"
					android:drawableRight="@drawable/right"
					android:text="@string/offline" />
		<View
			android:background="@color/black2"
			android:layout_width="fill_parent"
			android:layout_height="1px" />
		<!-- style="@style/TxtTitle" -->
		<TextView
					android:id="@+id/txt_help"
					
					android:textSize="16sp"
					android:gravity="center_vertical"
					android:background="@drawable/setting_item_selector"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:drawablePadding="12dp"
					android:drawableLeft="@drawable/help"
					android:drawableRight="@drawable/right"
					android:text="@string/help" />
		
	</LinearLayout>
	</ScrollView>
   
    

</LinearLayout>
